# wavefront_renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
src/: colors.hpp  geom.hpp  lights.hpp  main.cpp  models.hpp  scene.hpp  wavefront_loader.hpp
src/fileparsers/: tga.hpp
